--- a/src/Pages/Tickets/Test/TicketTask.css
+++ b/src/Pages/Tickets/Test/TicketTask.css
@@ -1,61 +1,61 @@
-.ticket{
-  background-color: #8E908F;
+.ticket {
+  background-color: #8e908f;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   border-radius: 15px;
   width: 30%;
   margin-left: 15px;
 }
 
-.searchbox{
+.searchbox {
   margin: 20px 0;
 }
-.pagination{
+.pagination {
   margin: 10px 0px 15px 0px;
 }
-.search{
-  width: 80%; 
+.search {
+  width: 80%;
   border-radius: 6px;
 }
 
 .truncate {
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-indent: 0;
-    text-align: justify;
-  }
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-indent: 0;
+  text-align: justify;
+}
 
-tbody tr{
+tbody tr {
   background-color: white;
 }
 
-.text{
-  margin: 10px 15px ;
+.text {
+  margin: 10px 15px;
 }
 
-tbody tr:hover{
-    background-color: aliceblue
-  }
-  
-.ticket-list{
+tbody tr:hover {
+  background-color: aliceblue;
+}
+
+.ticket-list {
   border-bottom: 1px solid gray;
 }
 
-.description{
+.description {
   border-right: 1px solid black;
 }
 
-.content{
+.content {
   margin: 0px 36px 0px 30px;
 }
-.heading{
+.heading {
   color: rgba(22, 33, 108, 1);
 }
-.details{
+.details {
   margin-left: 16px;
 }
-.values{
+.values {
   border: 1px solid white;
   background-color: rgba(13, 46, 97, 0.05);
 }
