--- a/src/Pages/Tickets/Test/TicketTask.css
+++ b/src/Pages/Tickets/Test/TicketTask.css
@@ -1,8 +1,8 @@
-.ticket {
-  background-color: #8e908f;
+.ticket_container {
+  background-color: #f9f9f9;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   border-radius: 15px;
-  width: 30%;
+  width: 31%;
   margin-left: 15px;
 }
 
@@ -15,6 +15,10 @@
 .search {
   width: 80%;
   border-radius: 6px;
+}
+.ticket{
+  height: 88px;
+  width: 350px;
 }
 
 .truncate {
