--- a/src/Pages/Chats/Chats.css
+++ b/src/Pages/Chats/Chats.css
@@ -1,5 +1,5 @@
 .videoWrapper {
-  width: 702px;
+  width: 60%;
   position: relative;
   border-radius: 10px;
 }
@@ -66,6 +66,7 @@
   position: absolute;
   top: 0px;
   left: 0px;
+  padding: 15px;
 }
 
 /* Video */
@@ -75,18 +76,6 @@
   height: 100vh;
 }
 
-.time_progressbarContainer {
-  background-color: gray;
-  border-radius: 15px;
-  width: 657.61px;
-  height: 5px;
-}
-
-.time_progressBar {
-  border-radius: 15px;
-  background-color: rgba(106, 199, 249, 1);
-  height: 100%;
-}
 
 .controlsTime {
   color: white;
@@ -95,34 +84,46 @@
 .bottomControl {
   position: absolute;
   bottom: 0;
-  margin-left: 22.19px;
+  padding: 15px;
+  width: 100%;
 }
 .videoSize {
   width: 80%;
 }
-.fullScreen_bottomControl {
+.fullScreenBottomControl {
   position: absolute;
   bottom: 0;
   margin-left: 22.19px;
   width: 80%;
 }
+.volumeWrapper{
+  margin-left:3px ;
+}
+.settingsWrapper{
+  margin-left: 55px;
+}
 
 .control {
   margin-bottom: 13px;
+  display: inline;
 }
 .backword {
   margin: 0px 18px 0px 12px;
+  display: inline-block;
 }
 .forward {
   margin: 0px 12px 0px 18px;
+  display: inline-block;
 }
 .fullScreen {
-  position: relative;
-  right: 0;
-  top: 0;
-  width: 100%;
+  position: fixed;
+  right: 25px;
+  top: 25px;
+  left: 25px;
+  bottom: 25px;
+  width: 90vw;
+  height: 90vh;
 }
-
 .volumeBar {
   margin-top: 10px;
   display: inline-block;
@@ -136,13 +137,13 @@
   display: inline-block;
 }
 
-.dropup-content {
+.dropupContent {
   display: none;
   position: absolute;
   background-color: black;
   bottom: 0;
 }
-.setting:hover .dropup-content {
+.setting:hover .dropupContent {
   display: block;
 }
 .speedSetting {
