--- a/src/Pages/Authentication/SignUp.css
+++ b/src/Pages/Authentication/SignUp.css
@@ -48,7 +48,7 @@
   width: 100%;
 }
 .fromWrap {
-  margin-top: 15px;
+  margin-top: 10px;
 }
 .fromWrap input {
   height: 60px;
@@ -57,7 +57,7 @@
   text-indent: 5px;
 }
 .fromWrap .inputHolder {
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 .customCheck .form-check {
   gap: 10px;
@@ -114,7 +114,7 @@
   color: var(--secondary) !important;
   border: 1px solid #ced4da;
   border-radius: 10px;
-  height: 70px;
+  height: 60px;
 }
 .formFooter button:hover {
   background: var(--primary);
@@ -259,4 +259,18 @@
   margin: 0 0 0;
   font-size: 0.875rem;
   width: 100% !important;
+}
+
+.region{
+  width: 30%;
+  margin-top: 10px;
+  display: inline-block;
+  height: 60px;
+}
+.stateOption{
+  margin: 0px 25px 0px 25px;
+}
+
+.checkBox{
+  margin-left: 0px;
 }
