--- a/src/MobileUI/Ticket/ticket.css
+++ b/src/MobileUI/Ticket/ticket.css
@@ -1,4 +1,35 @@
 .ticketData {
-  border-radius: 10px;
-  margin-bottom: 2px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 1px 1px;
+  margin-bottom: 10px;
+  list-style: none;
+  padding: 10px;
+}
+
+.addTicket{
+  text-align: end;
+}
+ul{
+  padding: 0px;
+}
+
+.truncate {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-indent: 0;
+  text-align: justify;
+}
+
+@media screen and (max-width: 550px) {
+  .truncate {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-indent: 0;
+    text-align: justify;
+  }
+  
 }
