--- a/src/MobileUI/Profile/profile.css
+++ b/src/MobileUI/Profile/profile.css
@@ -1,16 +1,16 @@
 .profileAvatar {
-    width: 10%;
-    height: 150px;
-    text-align: end
+  width: 10%;
+  height: 150px;
+  text-align: end;
 }
 
 .profileWrapper {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 @media screen and (max-width: 550px) {
-    .profileAvatar {
-        width: 20%;
-        height: 90px;
-    }
+  .profileAvatar {
+    width: 20%;
+    height: 90px;
+  }
 }
