--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,14 @@ a {
   .wrapperBase {
     padding: 15px;
   }
+  .buttonPrimary {
+    background-color: #16216c !important;
+    color: #fff !important;
+    min-height: 45px !important;
+    min-width: 100px !important;
+    border-radius: 10px !important;
+    border: 0;
+  }
 }
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
@@ -196,15 +204,6 @@ a {
   .customInputBox textarea {
     font-size: 14px;
   }
-}
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
-
-input[type='number'] {
-  -moz-appearance: textfield;
 }
 .blueBtn {
   background-color: #16216c !important;
