--- a/src/MobileUI/Profile/profile.css
+++ b/src/MobileUI/Profile/profile.css
@@ -8,6 +8,11 @@
   flex-direction: column;
 }
 
+.textContainer{
+  background-color: aliceblue;
+  padding: 5px;
+}
+
 @media screen and (max-width: 550px) {
   .profileAvatar {
     width: 20%;
