--- a/src/App.css
+++ b/src/App.css
@@ -165,7 +165,7 @@ a {
     display: block;
     position: fixed;
     background: var(--white);
-    z-index: 9999999999;
+    z-index: 999;
     height: 100%;
     min-width: 40%;
     box-shadow: 1px 2px 3px var(--gray1);
