--- a/src/MobileUI/MobileUsers/mobileUsers.css
+++ b/src/MobileUI/MobileUsers/mobileUsers.css
@@ -2,7 +2,7 @@
   position: relative;
   border-radius: 10px;
   border: 1px solid black;
-  padding-left: 30px;
+  padding: 30px;
   margin: 10px;
   list-style: none;
 }
